@@ -3,23 +3,19 @@
 # Edit to match your configuration.
 #
 
-# These devices are behind a vxi/gpib gw called "gpibgw"
-dg535		gpibgw:gpib0,15
-hp1630		gpibgw:gpib0,7
-hp3457		gpibgw:gpib0,22
-hp8656		gpibgw:gpib0,7
-hp3488		gpibgw:gpib0,8
+# These devices are behind a vxi/gpib gw
+dg535		192.168.1.77:gpib0,15
+hp1630		192.168.1.77:gpib0,7
+hp3457		192.168.1.77:gpib0,22
+hp8656		192.168.1.77:gpib0,7
+hp3488		192.168.1.77:gpib0,8
 
 # Native vxi (lxi) devices
-a34410		192.168.1.108:inst0
+a34401		192.168.1.108:inst0  # (actually a 34110A, 34401 has no LAN)
 a6032		192.168.1.109:inst0
 
 # These devices are directly attached to a linux-gpib board
-#hp1630		7
-#dg535		15
-r5005		5
-hp3455		1
 sr620		15
 
 # This device just takes a hostname
-ics8065		gpibgw
+ics8065		192.168.1.77
