@@ -53,7 +53,7 @@ to access instruments attached to a GPIB PCI or USB adapter.
  </td>
  <td>
   <ul>
-    <li><a href="www.icselect.com/pdfs/8065_ds.pdf">Data Sheet</a>
+    <li><a href="http://www.icselect.com/pdfs/8065_ds.pdf">Data Sheet</a>
   </ul>
  </td>
 </tr>
