@@ -3,7 +3,7 @@ CFLAGS=-Wall -Wno-unused -g $(CFLAGS_GPIB) $(CFLAGS_LSD)
 LDADD=-lrpcsvc -lm -lpthread -lreadline $(LDADD_GPIB)
 
 PROGS=hp1630 hptopbm hptodino hp3457 hp3488 hp8656 \
-      dg535 sr620 gpsh ics8065 a6032 a34410
+      dg535 sr620 gpsh ics8065 a6032 a34401
 LIBOBJS=util.o gpib.o units.o argv.o list.o hostlist.o ics.o \
 	vxi11_xdr.o vxi11_clnt.o vxi11intr_xdr.o vxi11intr_svc.o \
 	ics8000_clnt.o ics8000_xdr.o
@@ -28,8 +28,6 @@ sr620: sr620.o $(LIBOBJS)
 	$(CC) -o $@ sr620.o $(LIBOBJS) $(LDADD)
 hp3488: hp3488.o $(LIBOBJS)
 	$(CC) -o $@ hp3488.o $(LIBOBJS) $(LDADD)
-hp603x: hp603x.o $(LIBOBJS)
-	$(CC) -o $@ hp603x.o $(LIBOBJS) $(LDADD)
 gpsh: gpsh.o $(LIBOBJS)
 	$(CC) -o $@ gpsh.o $(LIBOBJS) $(LDADD) -lreadline -ltermcap
 ics8065: ics8065.o $(LIBOBJS)
@@ -37,8 +35,8 @@ ics8065: ics8065.o $(LIBOBJS)
 ics.o: ics8000.h
 a6032: a6032.o $(LIBOBJS)
 	$(CC) -o $@ a6032.o $(LIBOBJS) $(LDADD)
-a34410: a34410.o $(LIBOBJS)
-	$(CC) -o $@ a34410.o $(LIBOBJS) $(LDADD)
+a34401: a34401.o $(LIBOBJS)
+	$(CC) -o $@ a34401.o $(LIBOBJS) $(LDADD)
 
 # VXI-11 core/async
 gpib.o: vxi11.h
